Updates the whole project to be more responsive.

--- a/src/components/glitch/glitch.css
+++ b/src/components/glitch/glitch.css
@@ -3,8 +3,8 @@
     font-size: 8rem;
     font-weight: bold;
     position: relative;
-    width: 100%;
-    
+    width: auto;
+    text-align: center;
     animation: glitch 1000ms infinite;
   }
   
